fix: changes in z-index in header, changes in footer content

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -76,6 +76,8 @@ header {
 
     position: sticky;
     top: 0;
+
+    z-index: 9;
 }
 
 header figure {
@@ -305,11 +307,10 @@ footer {
 
 }
 
-footer figure{
-    display: none;
-}
-
-footer section {
+.copy {
+    width: 100%;
+    flex-direction: column;
     justify-content: flex-end;
-    padding: 0 0.2rem;
+    align-items: end;
+    padding: 0 0.5rem;
 }
